# Zhihu_Cmake2VsIDE

./: README.md  build_default.bat  delete_default.bat
src/: CMakeLists.txt  main.cpp
src/newtest/: newtest.cpp  newtest.h
src/test1/: CMakeLists.txt  test1.cpp  test1.h
src/test1/test2/: test2.cpp  test2.h
src/test1/test2/test3/: test3.cpp  test3.h
